--- a/OnlineStore.Application/OnlineStore.Application.csproj
+++ b/OnlineStore.Application/OnlineStore.Application.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineStore.Infraestructure\OnlineStore.Infraestructure.csproj" />
+  </ItemGroup>
+
 </Project>
