--- a/OnlineStore.Api/appsettings.json
+++ b/OnlineStore.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "SalesContext": "Data Source=DESKTOP-OE5C60V\\SQLEXPRESS;Database=OnlineStore;User ID=HolyGarcia;Password=20220381;MultipleActiveResultSets=true"
+  }
 }
+
