--- a/OnlineStore.Application/OnlineStore.Application.csproj
+++ b/OnlineStore.Application/OnlineStore.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.31.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OnlineStore.Infraestructure\OnlineStore.Infraestructure.csproj" />
   </ItemGroup>
 
