--- a/OnlineStore.Web/OnlineStore.Web.csproj
+++ b/OnlineStore.Web/OnlineStore.Web.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.14" />
   </ItemGroup>
 
+
+  <ItemGroup>
+    <Folder Include="Views\Account\" />
+    <Folder Include="Views\User\" />
+  </ItemGroup>
+
 </Project>
