--- a/OnlineStore.Web/appsettings.json
+++ b/OnlineStore.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiConfig": {
+    "urlBase": "http://localhost:5069/api"
+    
+  }
 }
