Los metodos funcionan en las api con el swagger, pero no en el proyecto web. falta ese error en el token

--- a/OnlineStore.Web/appsettings.Development.json
+++ b/OnlineStore.Web/appsettings.Development.json
@@ -5,6 +5,18 @@
       "Microsoft.AspNetCore": "Warning"
     }
 
+  },
+
+  "ApiConfig": {
+    "urlBase": "http://localhost:5069/api",
+    "urlBaseAuth": "http://localhost:5145/api"
+  },
+  "ProductErrorMessage": {
+    "GetProducto": "Error obteniendo el producto",
+    "GetProductos": "Error obteniendo los productos",
+    "Save": "Error guardando el producto",
+    "Update": "Error actualizando el producto"
   }
- 
+
 }
+
